--- a/css/userdashboard.css
+++ b/css/userdashboard.css
@@ -263,3 +263,29 @@ table {
   margin-right: 0px;
   
 }
+
+.heading-main12{
+  font-weight: 500;
+  font-size: 25px;
+}
+
+.non-style-link:link, .non-style-link:visited, .non-style-link:hover, .non-style-link:active{
+  text-decoration: none;
+  color: rgb(43, 43, 43);
+}
+
+.login-btn {
+  background-color: #2c2c2c !important; /* Change to your desired button color */
+  border: 1px solid #2c2c2c;
+  color: white !important; /* Text color */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-btn:hover {
+  background-color: #3e6085 !important; /* Change to the hover color */
+}
+
