--- a/css/userdashboard.css
+++ b/css/userdashboard.css
@@ -275,9 +275,9 @@ table {
 }
 
 .login-btn {
-  background-color: #2c2c2c !important; /* Change to your desired button color */
+  background-color: #2c2c2c !important; 
   border: 1px solid #2c2c2c;
-  color: white !important; /* Text color */
+  color: white !important;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
@@ -286,6 +286,17 @@ table {
 }
 
 .login-btn:hover {
-  background-color: #3e6085 !important; /* Change to the hover color */
+  background-color: #3e6085 !important;
+}
+
+.table-headin{
+  padding-bottom: 20px;
+}
+
+table.sub-table td {
+  text-align: left;
+  padding-bottom: 14px;
+  padding-left: 20px;
+  
 }
 
