Admin manage dashboard

--- a/css/userdashboard.css
+++ b/css/userdashboard.css
@@ -10,6 +10,8 @@
   width:100%;
   min-height:100vh;
   background-image: url("../images/signin.jpg");
+  background-size: cover; 
+  background-repeat: no-repeat;
   color:#525252;
 }
 
@@ -202,7 +204,7 @@ table {
 
 
 .btn-icon-back1{
-  background-image: url('../images/doctors.svg');
+  background-image: url('../images/doctors-hover.svg');
   background-position: 18px 50%;
   background-repeat: no-repeat;
   transition: 0.5s;
@@ -210,17 +212,17 @@ table {
 }
 
 .btn-icon-back1:hover{
-  background-image: url('../images/doctors-hover.svg');
+  background-image: url('../images/doctors.svg ');
 }
 
 
 .btn-icon-back2:hover{
-  background-image: url('../images/patients-hover.svg');
+  background-image: url('../images/patients.svg');
 }
 
 
 .btn-icon-back2{
-  background-image: url('../images/patients.svg');
+  background-image: url('../images/patients-hover.svg');
   background-position: 18px 50%;
   background-repeat: no-repeat;
   transition: 0.5s;
@@ -228,11 +230,11 @@ table {
 }
 
 .btn-icon-back3:hover{
-  background-image: url('../images/book-hover.svg');
+  background-image: url('../images/book.svg');
 }
 
 .btn-icon-back3{
-  background-image: url('../images/book.svg');
+  background-image: url('../images/book-hover.svg');
   background-position: 18px 50%;
   background-repeat: no-repeat;
   transition: 0.5s;
@@ -241,11 +243,11 @@ table {
 
 
 .btn-icon-back4:hover{
-  background-image: url('../images/session-iceblue.svg');
+  background-image: url('../images/session.svg');
 }
 
 .btn-icon-back4{
-  background-image: url('../images/session.svg');
+  background-image: url('../images/session-iceblue.svg');
   background-position: 18px 50%;
   background-repeat: no-repeat;
   transition: 0.5s;
@@ -286,17 +288,10 @@ table {
 }
 
 .login-btn:hover {
-  background-color: #3e6085 !important;
+  background-color: #8eb3db !important;
 }
 
 .table-headin{
   padding-bottom: 20px;
-}
-
-table.sub-table td {
-  text-align: left;
-  padding-bottom: 14px;
-  padding-left: 20px;
-  
 }
 
