--- a/admin/profile.css
+++ b/admin/profile.css
@@ -97,7 +97,19 @@ h2 {
 /* Profile actions styles */
 .profile-actions {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+.arrow {
+    border: solid rgb(210, 210, 210);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+  }
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
 }
 
 /* Edit button styles */
