--- a/admin/editprofile.css
+++ b/admin/editprofile.css
@@ -66,13 +66,15 @@
 
 /* Button styles */
 .btn-primary {
-    background-color: #0073e6;
+    background-color: #007bff;
     color: #fff;
-    padding: 10px 20px;
     border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
     border-radius: 5px;
-    text-decoration: none;
     margin-right: 10px;
+    font-size: 16px;
     transition: background-color 0.3s ease;
 }
 
@@ -81,10 +83,12 @@
 }
 
 .btn-secondary {
-    background-color: #ccc;
-    color: #333;
-    padding: 10px 20px;
+    background-color: #6c757d;
+    color: #fff;
     border: none;
+    padding: 10px 22px;
+    font-size: 16px;
+    cursor: pointer;
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s ease;
