--- a/css/diagnose.css
+++ b/css/diagnose.css
@@ -33,6 +33,7 @@ body{
   font-size:23px;
   font-weight:600;
   color:#333;
+  margin-bottom: 20px;
 }
 
 .container header::before{
@@ -52,7 +53,7 @@ body{
   margin-top:16px;
   min-height:490px;
   background-color: #F9F7F7;
-  overflow-x: hidden;
+  overflow: hidden;
   
 }
 
@@ -124,7 +125,7 @@ form.secActive .form.first{
   align-items:center;
   justify-content:space-between;
   flex-wrap:wrap;
-  margin-right: 80px;
+  margin-right: 30px;
 
 
 }
