--- a/css/manageAppoint.css
+++ b/css/manageAppoint.css
@@ -1,75 +1,82 @@
-    
+.tabs {
+    display: flex;
+}
 
-    /* CSS for the tabs and tables */
-    .tabs {
-        display: flex;
+.tab {
+    cursor: pointer;
+    padding: 10px 20px;
+    background-color: #CFDFFF;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
-    .tab {
-        cursor: pointer;
-        padding: 10px 20px;
-        background-color: #CFDFFF;
-        border: 1px solid #ccc;
-        border-bottom: none;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-    .tab.active {
-        background-color: #6C7B97;
-        color: #333;
-        color: #fff;
+.tab.active {
+    background-color: #6C7B97;
+    color: #333;
+    color: #fff;
         
     }
 
-    .tab-content {
-        display: none;
-        padding: 20px;
-        border: 1px solid #ccc;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
+.tab-content {
+    display: none;
+    padding: 20px;
+    border: 1px solid #ccc;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
 
-    .tab-content.active {
-        display: block;
-        opacity: 1;
-    }
+.tab-content.active {
+    display: block;
+    opacity: 1;
+}
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-    }
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
-    td {
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        padding: 20px;
-        border: 2px solid #ccc;
-    }
+td {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    padding-left: 20px;
+    border: 2px solid #ccc;
+}
 
-    th {
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        padding: 20px;
-        border: 2px solid #ccc;
-        background-color: #465981;
-        font-weight: bold;
-    }
+th {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    padding: 20px;
+    border: 2px solid #ccc;
+    background-color: #465981;
+    font-weight: bold;
+    color:  white;
+}
 
+.detail-images{
+    width: 50px;
+    height: 50px;
+    text-align: right;
+}
 
-    .modal{
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-    }
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
 
-    .modal-content{
-        background-color: #fff;
-        border-radius: 5px;
-        text-align: center;
-        padding: 20px;
-        width: 60%;
-        margin: 100px auto;
-    }
+.modal-content{
+    background-color: #fff;
+    border-radius: 5px;
+    text-align: center;
+    padding: 20px;
+    width: 60%;
+    margin: 100px auto;
+}
+
+.fa-pencil{
+    font-size: 35px;
+}
