--- a/css/diagnose.css
+++ b/css/diagnose.css
@@ -149,7 +149,7 @@ form .fields .input-field{
   font-weight:400;
   color:#333;
   border-radius:5px;
-  border:1px solid #aaa;
+  border:1px solid #ffffff;
   padding:0 15px;
   height:42px;
   margin: 8px 0;
