--- a/view/landingHeader.html
+++ b/view/landingHeader.html
@@ -68,7 +68,7 @@
 
   <div class="hero">
     <nav>
-      <img src="images/LOGO.png" class="logo" alt="">
+      <img src="../images/LOGO.png" class="logo" alt="">
       <ul>
         <li><a href="main.php">Home</a> </li>
         <li><a href="about.php">About</a></li>
